--- a/Example/KJCurveSlider/Base.lproj/Main.storyboard
+++ b/Example/KJCurveSlider/Base.lproj/Main.storyboard
@@ -1,25 +1,80 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="KJCurveSlider_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dz8-Pe-WEz" customClass="KJCurveSlider">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="333.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="68z-tD-h72" customClass="KJCurveSlider">
+                                <rect key="frame" x="9" y="439" width="220" height="220"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="DAP-Te-iNv"/>
+                                    <constraint firstAttribute="height" constant="220" id="RY8-7m-dkp"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pIG-8n-7h3" customClass="KJCurveSlider">
+                                <rect key="frame" x="237" y="439" width="130" height="130"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="CJ3-YD-tXO"/>
+                                    <constraint firstAttribute="height" constant="130" id="lAU-Dt-yU1"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rEk-VS-5zc">
+                                <rect key="frame" x="281" y="569" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Dz8-Pe-WEz" firstAttribute="height" secondItem="kh9-bI-dsS" secondAttribute="height" multiplier="0.5" id="8BU-bg-Ntf"/>
+                            <constraint firstItem="Dz8-Pe-WEz" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="CKh-NI-bot"/>
+                            <constraint firstItem="rEk-VS-5zc" firstAttribute="top" secondItem="pIG-8n-7h3" secondAttribute="bottom" id="CNN-Yp-8vh"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="68z-tD-h72" secondAttribute="bottom" constant="8" id="E26-4Y-yZ0"/>
+                            <constraint firstItem="Dz8-Pe-WEz" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="GCd-Gb-Amf"/>
+                            <constraint firstItem="pIG-8n-7h3" firstAttribute="top" secondItem="68z-tD-h72" secondAttribute="top" id="GSi-cH-OTk"/>
+                            <constraint firstAttribute="trailing" secondItem="pIG-8n-7h3" secondAttribute="trailing" constant="8" id="MvV-O1-HKQ"/>
+                            <constraint firstItem="68z-tD-h72" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="9" id="Utk-T8-eXi"/>
+                            <constraint firstItem="rEk-VS-5zc" firstAttribute="centerX" secondItem="pIG-8n-7h3" secondAttribute="centerX" id="V5D-oL-ZZw"/>
+                            <constraint firstAttribute="trailing" secondItem="Dz8-Pe-WEz" secondAttribute="trailing" id="VwQ-9u-5YD"/>
+                            <constraint firstItem="pIG-8n-7h3" firstAttribute="leading" secondItem="68z-tD-h72" secondAttribute="trailing" constant="8" id="mC6-vM-xo8"/>
+                            <constraint firstItem="68z-tD-h72" firstAttribute="top" secondItem="Dz8-Pe-WEz" secondAttribute="bottom" constant="105.5" id="qlQ-AH-up4"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="curveSliderLarge" destination="Dz8-Pe-WEz" id="tWv-go-ukc"/>
+                        <outlet property="curveSliderMedium" destination="68z-tD-h72" id="CP7-8Z-QFi"/>
+                        <outlet property="curveSliderSmall" destination="pIG-8n-7h3" id="RTW-aQ-9uF"/>
+                        <outlet property="labelPercentForSmallerCurveSlider" destination="rEk-VS-5zc" id="Yb0-Bf-4Ik"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
